# komp

./: .gitignore  Cargo.toml  README.md  bun.lockb  compose.yaml  index.js  index.ts  package-lock.json  package.json  tsconfig.json
src/: command.js  command.rs  command.ts  file.js  file.rs  file.ts  main.rs  schema.js  schema.rs  schema.ts  services.js  services.rs  services.ts
