[package]
name = "komp"
version = "0.1.1"
edition = "2021"
authors = ["Eliott Wantz <dev.eliottdev@gmail.com>"]
repository = "https://github.com/eliottwantz/komp"
description = "Komp generates local docker compose file with your selected services to get you up and running in seconds"
license = "MIT"
homepage = "https://github.com/eliottwantz/komp"
readme = "README.md"
keywords = ["docker", "docker-compose", "cli", "local-development"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.7", features = ["derive", "cargo"] }
cliclack = "0.3.1"
console = "0.15.8"
ctrlc = "3.4.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_norway = "0.9.36"

[profile.release]
strip = true
opt-level = "z"
